--- a/src/v/storage/tests/BUILD
+++ b/src/v/storage/tests/BUILD
@@ -135,6 +135,8 @@ redpanda_cc_btest(
         "//src/v/random:generators",
         "//src/v/serde",
         "//src/v/storage:index_state",
+        "//src/v/test_utils:scoped_config",
+        "//src/v/utils:delta_for",
         "@boost//:test",
         "@seastar//:testing",
     ],
